# netman

./: .gitignore  Dockerfile  pyproject.toml  run.py
netman/: app.py  auth.py  config.yaml  models.py  users.yaml
netman/templates/: base.html  index.html  login.html  register.html
tests/: test_app.py
